--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=app
 spring.data.mongodb.uri=mongodb+srv://sayanmukherjee7663:H01xM3gpbTgcip1m@cluster0.otpcwfv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=springBlog
 server.port=8081
+spring.redis.host=localhost
+spring.redis.port=6379
