--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=app
 spring.data.mongodb.uri=mongodb+srv://sayanmukherjee7663:H01xM3gpbTgcip1m@cluster0.otpcwfv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=springBlog
 server.port=8081
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.host= redis-16930.c301.ap-south-1-1.ec2.redns.redis-cloud.com
+spring.redis.port=16930
+spring.redis.password=r3odsyb0YzoBtzsprc4cR6MA77bpEqjw
