--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	//compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
+	implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.38.0'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
